# python-intro

zadanie_1/: 152727.py
zadanie_2/: .coverage  app.py  test_app.py
zadanie_2/htmlcov/: app_py.html  class_index.html  function_index.html  index.html  status.json  test_app_py.html
zadanie_3/: README.md  pyproject.toml  requirements.txt  setup.py
zadanie_3/my_awesome_lib/: __init__.py  data_utils.py  math_tools.py  text_processing.py
zadanie_3/tests/: __init__.py  test_data_utils.py  test_math_tools.py  test_text_processing.py
zadanie_4/: raport.md  zadanie_pymcdm.py
zadanie_5/: README.md  zadanie.py
