[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-awesome-lib"
version = "1.0.0"
description = "Biblioteka narzędziowa do przetwarzania danych, obliczeń matematycznych i tekstu"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Grzegorz", email = "test@test.test"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/gkuczynski/my-awesome-lib"
Repository = "https://github.com/gkuczynski/my-awesome-lib"
Issues = "https://github.com/gkuczynski/my-awesome-lib/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "flake8>=4.0",
    "black>=22.0",
    "mypy>=0.900",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
